# github-income-scout

./: .gitignore  LAUNCH_CHECKLIST.md  LICENSE  MARKETPLACE.md  PUBLISHING.md  README.md  RELEASE_NOTES.md  SERVICE_MENU.md  action.yml  pricing.md  pyproject.toml  roadmap.md  service_offer.md
docs/: weekly_scout_workflow.md
examples/: cash_bounty_queries.json  client_profile.json  delivery_bundle.md  live_quick.json  open_source_delivery_case_study.md  profile_opportunity_pack_example.md  queries.json  sample_audit.md  sample_client_brief.md  sample_issues.json  sample_opportunities.html  sample_opportunities.md  starter_audit_case_study.md
profile/: PUBLISH_PROFILE.md  README.md  SERVICES.md
reports/: awesome_codex_skills_pr172.md  bitbox_external_action_pack.md  bitbox_pr125_body.md  bitbox_pr125_status.md  bitbox_pr_precheck.md  cash_bounty_opportunities.md  cash_bounty_triage_2026-07-13.md  cash_opportunity_scan_2026-07-13.md  client_brief.md  cngx_issue44_pr_pack.md  current_progress.md  current_status_2026-07-13.md  current_status_2026-07-15.md  current_status_2026-07-16.md  distribution_awesome_ai_automations_pr1.md  distribution_scan_2026-07-13.md  github_profile_readme_draft.md  imod_python_issue1879_pr_pack.md  kubeflow_mcp_issue54_pr_pack.md  live_snapshot_2026-07-05.md  live_snapshot_2026-07-06.md  live_snapshot_2026-07-06_evening.md  live_snapshot_2026-07-06_followup.md  live_snapshot_2026-07-06_late.md  live_snapshot_2026-07-06_late_full.md  live_snapshot_2026-07-07.md  live_snapshot_2026-07-13.json  live_triage_2026-07-07.md  live_triage_2026-07-11.md  (+20 more)
(+48 files in other folders)
